@@ -1,0 +1,4 @@
+Matt Westcott <matt@west.co.tt> , http://matt.west.co.tt
+    - Main code
+Paul van der Laan , http://www.type-invaders.com/
+    - Clairsys font
