@@ -1,124 +1,0 @@
-; font.asm: 8x8 bitmap font
-; From the OpenZXRom project
-;
-; $Id: font.asm 16 2005-12-18 16:45:24Z gasman $
-;
-; This program is free software; you can redistribute it and/or modify
-; it under the terms of the GNU General Public License version 2 as
-; published by the Free Software Foundation.
-;
-; This program is distributed in the hope that it will be useful,
-; but WITHOUT ANY WARRANTY; without even the implied warranty of
-; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-; GNU General Public License for more details.
-;
-; You should have received a copy of the GNU General Public License
-; along with this program; if not, write to the Free Software
-; Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
-;
-; Author contact information:
-;
-; E-mail: matthew@west.co.tt
-; Postal address: 14 Daisy Hill Drive, Adlington, Chorley,
-;                 Lancs, PR6 9NE, United Kingdom
-
-; This data is adapted from iso01a-8x8.hex, downloaded from
-; http://bellota.ele.uva.es/~jesus/feos/feos/iso01a-8x8.hex
-; and understood to be licensed under the GPL v2
-
-			db 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00	; space
-			db 0x30,0x78,0x78,0x30,0x30,0x00,0x30,0x00	; !
-			db 0x6C,0x6C,0x6C,0x00,0x00,0x00,0x00,0x00	; "
-			db 0x6C,0x6C,0xFE,0x6C,0xFE,0x6C,0x6C,0x00	; #
-			db 0x30,0x7C,0xC0,0x78,0x0C,0xF8,0x30,0x00	; $
-			db 0x00,0xC6,0xCC,0x18,0x30,0x66,0xC6,0x00	; %
-			db 0x38,0x6C,0x38,0x76,0xDC,0xCC,0x76,0x00	; &
-			db 0x60,0x60,0xC0,0x00,0x00,0x00,0x00,0x00	; '
-			db 0x18,0x30,0x60,0x60,0x60,0x30,0x18,0x00	; (
-			db 0x60,0x30,0x18,0x18,0x18,0x30,0x60,0x00	; )
-			db 0x00,0x66,0x3C,0xFF,0x3C,0x66,0x00,0x00	; *
-			db 0x00,0x30,0x30,0xFC,0x30,0x30,0x00,0x00	; +
-			db 0x00,0x00,0x00,0x00,0x00,0x30,0x30,0x60	; ,
-			db 0x00,0x00,0x00,0xFC,0x00,0x00,0x00,0x00	; -
-			db 0x00,0x00,0x00,0x00,0x00,0x30,0x30,0x00	; .
-			db 0x06,0x0C,0x18,0x30,0x60,0xC0,0x80,0x00	; /
-			db 0x7C,0xC6,0xCE,0xDE,0xF6,0xE6,0x7C,0x00	; 0
-			db 0x30,0x70,0x30,0x30,0x30,0x30,0xFC,0x00	; 1
-			db 0x78,0xCC,0x0C,0x38,0x60,0xCC,0xFC,0x00	; 2
-			db 0x78,0xCC,0x0C,0x38,0x0C,0xCC,0x78,0x00	; 3
-			db 0x1C,0x3C,0x6C,0xCC,0xFE,0x0C,0x1E,0x00	; 4
-			db 0xFC,0xC0,0xF8,0x0C,0x0C,0xCC,0x78,0x00	; 5
-			db 0x38,0x60,0xC0,0xF8,0xCC,0xCC,0x78,0x00	; 6
-			db 0xFC,0xCC,0x0C,0x18,0x30,0x30,0x30,0x00	; 7
-			db 0x78,0xCC,0xCC,0x78,0xCC,0xCC,0x78,0x00	; 8
-			db 0x78,0xCC,0xCC,0x7C,0x0C,0x18,0x70,0x00	; 9
-			db 0x00,0x30,0x30,0x00,0x00,0x30,0x30,0x00	; :
-			db 0x00,0x30,0x30,0x00,0x00,0x30,0x30,0x60	; ;
-			db 0x18,0x30,0x60,0xC0,0x60,0x30,0x18,0x00	; <
-			db 0x00,0x00,0xFC,0x00,0x00,0xFC,0x00,0x00	; =
-			db 0x60,0x30,0x18,0x0C,0x18,0x30,0x60,0x00	; >
-			db 0x78,0xCC,0x0C,0x18,0x30,0x00,0x30,0x00	; ?
-			db 0x7C,0xC6,0xDE,0xDE,0xDE,0xC0,0x78,0x00	; @
-			db 0x30,0x78,0xCC,0xCC,0xFC,0xCC,0xCC,0x00	; A
-			db 0xFC,0x66,0x66,0x7C,0x66,0x66,0xFC,0x00	; B
-			db 0x3C,0x66,0xC0,0xC0,0xC0,0x66,0x3C,0x00	; C
-			db 0xF8,0x6C,0x66,0x66,0x66,0x6C,0xF8,0x00	; D
-			db 0xFE,0x62,0x68,0x78,0x68,0x62,0xFE,0x00	; E
-			db 0xFE,0x62,0x68,0x78,0x68,0x60,0xF0,0x00	; F
-			db 0x3C,0x66,0xC0,0xC0,0xCE,0x66,0x3E,0x00	; G
-			db 0xCC,0xCC,0xCC,0xFC,0xCC,0xCC,0xCC,0x00	; H
-			db 0x78,0x30,0x30,0x30,0x30,0x30,0x78,0x00	; I
-			db 0x1E,0x0C,0x0C,0x0C,0xCC,0xCC,0x78,0x00	; J
-			db 0xE6,0x66,0x6C,0x78,0x6C,0x66,0xE6,0x00	; K
-			db 0xF0,0x60,0x60,0x60,0x62,0x66,0xFE,0x00	; L
-			db 0xC6,0xEE,0xFE,0xFE,0xD6,0xC6,0xC6,0x00	; M
-			db 0xC6,0xE6,0xF6,0xDE,0xCE,0xC6,0xC6,0x00	; N
-			db 0x38,0x6C,0xC6,0xC6,0xC6,0x6C,0x38,0x00	; O
-			db 0xFC,0x66,0x66,0x7C,0x60,0x60,0xF0,0x00	; P
-			db 0x78,0xCC,0xCC,0xCC,0xDC,0x78,0x1C,0x00	; Q
-			db 0xFC,0x66,0x66,0x7C,0x6C,0x66,0xE6,0x00	; R
-			db 0x78,0xCC,0xE0,0x70,0x1C,0xCC,0x78,0x00	; S
-			db 0xFC,0xB4,0x30,0x30,0x30,0x30,0x78,0x00	; T
-			db 0xCC,0xCC,0xCC,0xCC,0xCC,0xCC,0xFC,0x00	; U
-			db 0xCC,0xCC,0xCC,0xCC,0xCC,0x78,0x30,0x00	; V
-			db 0xC6,0xC6,0xC6,0xD6,0xFE,0xEE,0xC6,0x00	; W
-			db 0xC6,0xC6,0x6C,0x38,0x38,0x6C,0xC6,0x00	; X
-			db 0xCC,0xCC,0xCC,0x78,0x30,0x30,0x78,0x00	; Y
-			db 0xFE,0xC6,0x8C,0x18,0x32,0x66,0xFE,0x00	; Z
-			db 0x78,0x60,0x60,0x60,0x60,0x60,0x78,0x00	; [
-			db 0xC0,0x60,0x30,0x18,0x0C,0x06,0x02,0x00	; /
-			db 0x78,0x18,0x18,0x18,0x18,0x18,0x78,0x00	; ]
-			db 0x10,0x38,0x6C,0xC6,0x00,0x00,0x00,0x00	; ^
-			db 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0xFF	; _
-			db %00111100, %01100110, %01100000, %11111000, %01100000, %01100010, %11111110, %00000000	; pound (Spectrum customisation, not ASCII)
-			db 0x00,0x00,0x78,0x0C,0x7C,0xCC,0x76,0x00	; a
-			db 0xE0,0x60,0x60,0x7C,0x66,0x66,0xDC,0x00	; b
-			db 0x00,0x00,0x78,0xCC,0xC0,0xCC,0x78,0x00	; c
-			db 0x1C,0x0C,0x0C,0x7C,0xCC,0xCC,0x76,0x00	; d
-			db 0x00,0x00,0x78,0xCC,0xFC,0xC0,0x78,0x00	; e
-			db 0x38,0x6C,0x60,0xF0,0x60,0x60,0xF0,0x00	; f
-			db 0x00,0x00,0x76,0xCC,0xCC,0x7C,0x0C,0xF8	; g
-			db 0xE0,0x60,0x6C,0x76,0x66,0x66,0xE6,0x00	; h
-			db 0x30,0x00,0x70,0x30,0x30,0x30,0x78,0x00	; i
-			db 0x0C,0x00,0x0C,0x0C,0x0C,0xCC,0xCC,0x78	; j
-			db 0xE0,0x60,0x66,0x6C,0x78,0x6C,0xE6,0x00	; k
-			db 0x70,0x30,0x30,0x30,0x30,0x30,0x78,0x00	; l
-			db 0x00,0x00,0xCC,0xFE,0xFE,0xD6,0xC6,0x00	; m
-			db 0x00,0x00,0xF8,0xCC,0xCC,0xCC,0xCC,0x00	; n
-			db 0x00,0x00,0x78,0xCC,0xCC,0xCC,0x78,0x00	; o
-			db 0x00,0x00,0xDC,0x66,0x66,0x7C,0x60,0xF0	; p
-			db 0x00,0x00,0x76,0xCC,0xCC,0x7C,0x0C,0x1E	; q
-			db 0x00,0x00,0xDC,0x76,0x66,0x60,0xF0,0x00	; r
-			db 0x00,0x00,0x7C,0xC0,0x78,0x0C,0xF8,0x00	; s
-			db 0x10,0x30,0x7C,0x30,0x30,0x34,0x18,0x00	; t
-			db 0x00,0x00,0xCC,0xCC,0xCC,0xCC,0x76,0x00	; u
-			db 0x00,0x00,0xCC,0xCC,0xCC,0x78,0x30,0x00	; v
-			db 0x00,0x00,0xC6,0xD6,0xFE,0xFE,0x6C,0x00	; w
-			db 0x00,0x00,0xC6,0x6C,0x38,0x6C,0xC6,0x00	; x
-			db 0x00,0x00,0xCC,0xCC,0xCC,0x7C,0x0C,0xF8	; y
-			db 0x00,0x00,0xFC,0x98,0x30,0x64,0xFC,0x00	; z
-			db 0x1C,0x30,0x30,0xE0,0x30,0x30,0x1C,0x00	; {
-			db 0x18,0x18,0x18,0x00,0x18,0x18,0x18,0x00	; |
-			db 0xE0,0x30,0x30,0x1C,0x30,0x30,0xE0,0x00	; }
-			db 0x76,0xDC,0x00,0x00,0x00,0x00,0x00,0x00	; ~
-			db %00111100, %01000010, %10011101, %10110001, %10110001, %10011101, %01000010, %00111100	; copyright (Spectrum customisation, not ASCII)
